--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en" data-theme="light">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="shortcut icon" href="https://previews.123rf.com/images/artrise/artrise1806/artrise180600022/103576938-cinema-logo-vector-emblem-template.jpg?fj=1" type="image/x-icon">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Cinema Hall</title>
   </head>
   <body>
     <div id="root"></div>
